fixing regression test